<resources>
    <string name="app_name">Bio Battle</string>
    <string name="buy_text">Buy Tower</string>
    <string name="sell_text">Sell Tower</string>
    <string name="play_text">Play Now</string>
    <string name="tower_desc">Towers</string>
    <string name="exit_level">Exit level</string>
    <string name="wave">Wave</string>
    <string name="wave_completed">Wave Completed</string>
    <string name="game_over">Game Over</string>
    <string name="next_wave">Next Wave</string>
    <string name="victory">Victory!</string>
    <string name="defeat">Defeat</string>
    <string name="score">Score</string>
    <string name="health">Health 100</string>
    <string name="gold">Gold</string>
    <string name="upgrade">Upgrade</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="back">Back</string>
    <string name="sound">Sound</string>
    <string name="menuContentDescription">Main Menu</string>
    <string name="frameContentDescription">Frame</string>
    <string name="killerTCellDescription">Killer Tim</string>
    <string name="simpleTowerDesc">Simple Cell</string>
    <string name="golgiTowerDesc">Golgi Cell</string>
    <string name="cannonTowerDesc">Cannon Cell</string>
    <string name="killerTCost">$3250</string>
    <string name ="tacCost">$450</string>
    <string name="cannonCost">$650</string>
    <string name="basicCost">$250</string>
    <string name="store">Store</string>
    <string name="music">Music</string>
    <string name="restart">Restart</string>
    <string name="moneySign">$</string>
    <string name="upgradeCostOne">125</string>
    <string name="upgradeCostTwo">250</string>
    <string name="upgradeCostThree">500</string>
    <string name="upgradeStatOne">Attack Speed +</string>
    <string name="upgradeStatTwo">Attack Range +</string>
    <string name="upgradeStatThree">Attack Damage +</string>
    <string name="confirm_restart">Are you sure you want to restart the level?</string>
    <string name="confirm_exit">Are you sure you want to exit the level? Progress will be lost.</string>
    <string name="confirm_sell">Are you sure you want to sell this tower?</string>
    <string name="settings_saved">Settings saved</string>
    <string name="confirm_quit">Are you sure you want to quit the game?</string>
    <string name ="nothing">.</string>
    <string name="placement">Select a tower from the store and the position you want to place it. Tap Next Wave to start the first wave.</string>
    <string name="level1">You defeated the first wave, the next one wont be so easy.</string>
    <string name="level2">You\'re getting the hang of this.</string>
    <string name="level3">The infection gets stronger each wave, be careful.</string>
    <string name="level4">Each cell type has a specific amount of upgrades that can be applied.</string>
    <string name="level9">The next wave contains a boss, prepare accordingly.</string>
    <string name="level10">Congrats, make sure to keep your lives from reaching 0!</string>
    <string name="level25">Congrats, youv\'e made it a quarter of the way to 100!</string>
    <string name="level50">Congrats, youv\'e made it halfway to 100!</string>
    <string name="level100">Wave 100 did not stand a chance against you!</string>
    <string name="level115">Okay now you\'re just showing off!</string>
    <string name="startWave">Start Wave</string>
    <string name="playAgain">Play Again?</string>
</resources>
