<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#E1E1E1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/map"
            android:contentDescription="@string/play_text"
            />

    </FrameLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="107dp"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:background="@color/cyan"
        android:rowCount="6"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id ="@+id/wave"
            android:layout_columnSpan="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wave"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            />
        <TextView
            android:id ="@+id/health"
            android:layout_columnSpan="2"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            />
        <TextView
            android:id ="@+id/money"
            android:layout_columnSpan="2"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id= "@+id/store"
            android:text="@string/store"
            android:textSize="20sp"
            android:layout_columnSpan="2"
            android:textColor="@color/seaGreen"
            />
        <!-- Image 1 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/frame_tower"
                android:contentDescription="@string/frameContentDescription"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="0.6dp"
                android:contentDescription="@string/simpleTowerDesc"
                android:src="@drawable/simpletower"
                android:scaleType="fitXY"
                android:scaleX="0.7"
                android:scaleY ="0.7"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/basicCost"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:textColor="@color/yellow">
            </TextView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/frameContentDescription" />

            <ImageButton
                android:id="@+id/dragBasic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:background="@color/invisible"
                android:contentDescription="@string/buy_text"
                android:text="@string/buy_text"
                android:onClick="spawnDragTower" />
        </RelativeLayout>

        <!-- Image 2 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="2dp"
                android:contentDescription="@string/frameContentDescription"
                android:src="@drawable/frame_tower" />
            <ImageView
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="0.6dp"
                android:contentDescription="@string/golgiTowerDesc"
                android:src="@drawable/golgitower"
                android:scaleType="fitXY"
                android:scaleX="1"
                android:scaleY ="1"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/tacCost"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:textColor="@color/yellow">
            </TextView>
            <ImageButton
                android:id="@+id/dragTac"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="2dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@color/invisible"
                android:contentDescription="@string/buy_text"
                android:text="@string/buy_text"
                android:onClick="spawnDragTower" />
        </RelativeLayout>

        <!-- Image 3 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/frameContentDescription"
                android:src="@drawable/frame_tower" />
            <ImageView
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="0.6dp"
                android:contentDescription="@string/cannonTowerDesc"
                android:src="@drawable/cannontower"
                android:scaleType="fitXY"
                android:scaleX="0.7"
                android:scaleY ="0.7"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/cannonCost"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:textColor="@color/yellow">
            </TextView>
            <ImageButton
                android:id="@+id/dragCannon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:background="@color/invisible"
                android:contentDescription="@string/buy_text"
                android:text="@string/buy_text"
                android:onClick="spawnDragTower" />
        </RelativeLayout>

        <!-- Image 4 -->
        <RelativeLayout
            android:id= "@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/frame_tower"
                android:contentDescription="@string/frameContentDescription"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="0.6dp"
                android:contentDescription="@string/killerTCellDescription"
                android:src="@drawable/killertcellp"
                android:scaleType="fitXY"
                android:scaleX="0.7"
                android:scaleY ="0.7"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/killerTCost"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:textColor="@color/yellow">
            </TextView>

            <ImageButton
                android:id="@+id/dragKillerTom"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginHorizontal="2dp"
                android:background="@color/invisible"
                android:contentDescription="@string/buy_text"
                android:text="@string/buy_text"
                android:onClick="spawnDragTower" />
        </RelativeLayout>
        <ImageButton
            android:id="@+id/buyButton"
            android:layout_marginTop="0dp"
            android:layout_marginStart="3dp"
            android:scaleType="fitXY"
            android:scaleY="1"
            android:scaleX="1"
            android:src="@drawable/buybutton"
            android:onClick="BuyButtonClick"
            android:layout_columnSpan="1"
            android:layout_width="50dp"
            android:layout_height ="48dp"
            android:background="@color/invisible"
            android:contentDescription="@string/buy_text"
            />
        <ImageButton
            android:id ="@+id/sellButton"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:scaleY="1"
            android:scaleX="0.96"
            android:scaleType="fitXY"
            android:src ="@drawable/sellbutton"
            android:layout_columnSpan="1"
            android:layout_width="50dp"
            android:layout_height ="48dp"
            android:background="@color/invisible"
            android:contentDescription="@string/sell_text"
            android:onClick="deleteSelectedTower"
            />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
